--- a/main.ipynb
+++ b/main.ipynb
@@ -24,8 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +39,7 @@
        "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,9 +47,21 @@
    "source": [
     "from langchain_community.document_loaders import DirectoryLoader\n",
     "\n",
-    "loader = DirectoryLoader('test dir', glob=\"**/*.md\")\n",
+    "loader = DirectoryLoader('testdir', glob=\"**/*.csv\")\n",
     "docs = loader.load()\n",
     "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Template"
    ]
   },
   {
@@ -52,7 +69,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -71,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
