--- a/new.ipynb
+++ b/new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,21 +10,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Sure, here's a short monkey-themed joke in CSV format:\n",
+      "Why did the monkey get kicked out of the library?\n",
       "\n",
-      "---\n",
-      "\n",
-      "Monkey Jokes | Joke Text | Joke Type | Audience\n",
-      "\n",
-      "1 | Why did the monkey get kicked out of the library? | Play on words | Adults and children\n",
-      "2 | What do you call a group of monkeys playing instruments? | Pun | Children and families\n",
-      "3 | How do you make a monkey laugh? | Wordplay | Adults and teenagers\n",
-      "4 | Why did the monkey go to the gym? | Expectation subversion | Adults and teenagers\n",
-      "5 | What do you call a monkey who loves to tell jokes? | Puns | Children and families\n",
-      "\n",
-      "---\n",
-      "\n",
-      "I hope these jokes bring a smile to your face!\n"
+      "Because he was caught monkeying around!\n"
      ]
     }
    ],
@@ -37,7 +25,7 @@
     "# supports many more optional parameters. Hover on your `ChatOllama(...)`\n",
     "# class to view the latest available supported parameters\n",
     "llm = ChatOllama(model=\"llama2\")\n",
-    "prompt = ChatPromptTemplate.from_template(\"Tell me a short joke about {topic} Respond in the csv format.\")\n",
+    "prompt = ChatPromptTemplate.from_template(\"Tell me a short joke about {topic}.\")\n",
     "\n",
     "# using LangChain Expressive Language chain syntax\n",
     "# learn more about the LCEL on\n",
@@ -55,7 +43,88 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# This is a long document we can split up.\n",
+    "with open(\"../../state_of_the_union.txt\") as f:\n",
+    "    state_of_the_union = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_text_splitters import SpacyTextSplitter\n",
+    "\n",
+    "text_splitter = SpacyTextSplitter(chunk_size=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = text_splitter.split_text(state_of_the_union)\n",
+    "print(texts[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Embeeding Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.embeddings import GPT4AllEmbeddings\n",
+    "from langchain_community.vectorstores import Chroma\n",
+    "from langchain.storage import InMemoryStore\n",
+    "from langchain.retrievers.multi_vector import MultiVectorRetriever\n",
+    "\n",
+    "\n",
+    "# The vectorstore to use to index the child chunks\n",
+    "vectorstore = Chroma(\n",
+    "    collection_name=\"summaries\", embedding_function=GPT4AllEmbeddings()\n",
+    ")\n",
+    "\n",
+    "# The storage layer for the parent documents\n",
+    "store = InMemoryStore()  # <- Can we extend this to images\n",
+    "id_key = \"doc_id\"\n",
+    "\n",
+    "# The retriever (empty to start)\n",
+    "retriever = MultiVectorRetriever(\n",
+    "    vectorstore=vectorstore,\n",
+    "    docstore=store,\n",
+    "    id_key=id_key,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langchain_community.vectorstores.chroma.Chroma at 0x101766ea0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorstore"
+   ]
   }
  ],
  "metadata": {
@@ -74,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
